# sort-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hungarian.cpp  hungarian.h  kalman_box_tracker.cpp  kalman_box_tracker.h  kuhn_munkres.cpp  kuhn_munkres.h  main.cpp  sort.cpp  sort.h
data/: README.md
data/TUD-Campus/: seqinfo.ini
data/TUD-Stadtmitte/: seqinfo.ini
